--- a/style.css
+++ b/style.css
@@ -380,8 +380,13 @@ h2 {
     display: none;
   }
 
-  .topo .img{
-    width: 10px;
+  .topo .container{
+    margin-top: 40px;
+    text-align: center;
+  }
+
+  .topo .container img {
+    height: 7%; /* ou qualquer valor menor que 80px */
   }
 }
 
